--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^12.12.21",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
+    "@types/styled-components": "^4.4.2",
     "typescript": "3.7.3"
   },
   "license": "ISC"
