--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
     "@types/styled-components": "^4.4.2",
+    "dotenv": "^8.2.0",
     "typescript": "3.7.3"
   },
   "license": "ISC"
